CSS/styles.css
/* ... */
/*
- We have used a single dash to separate these words because this is not a modifier for the icon class.
- It is an entirely new class and we use single dash to separate different words in BEM. 
*/

.icon-container--accent {
    background: var(--color-accent);
}

/* Buttons */

.btn {
    border-radius: 5rem;
    border: 0;
    cursor: pointer;
    /* To make the cursor change to pointer when we hover on it to make them look clickable. */

    font-size: 1.8rem;
    font-weight: 600;
    margin: 1rem 0;
    padding: 2rem 3rem;
    text-align: center;
    text-transform: uppercase;
    white-space: nowrap;

    /* box-sizing for button element is by default set to border-box but for anchor element we have to set it manually. */
}

.btn .icon {
    width: 2rem;
    height: 2rem;
    margin-right: 0.5rem;
    vertical-align: middle;
}

.btn--secondary {
    background: var(--color-secondary);
    color: white;
}

.btn--secondary:hover {
    background: #00c8eb;
}

.btn--accent {
    background: var(--color-accent);
    color: white;
}

.btn--accent:hover {
    background: #ec3000;
}

.btn--block {
    width: 100%;
    display: inline-block;
    /* For anchor elements, we have to set it to inline-block because they are inline elements and width property does not apply to them. */
}

.btn--outline {
    background: none;
    border: 2px solid var(--color-headings);
    color: var(--color-headings);
}

.btn--outline:hover {
    background: var(--color-headings);
    color: white;
}

.btn--stretched {
    padding-left: 8rem;
    padding-right: 8rem;
}

@media screen and (min-width: 1024px) {
    .btn {
        font-size: 1.5rem;
    }
}

/* Inputs */

.input {
    border-radius: var(--border-radius);
    border: 1px solid var(--color-border);
    color: var(--color-headings);
    font-size: 2rem;
    outline: 0;
    padding: 1.5rem 3.5rem;
}

::placeholder {
    /* This is a pseudo-element selector to select placeholder of the input element. */
    color: #cdcbd7;
}

.input-group {
    border-radius: var(--border-radius);
    border: 1px solid var(--color-border);
    display: flex;
}

.input-group .input {
    border: 0;
    flex-grow: 1;
    padding: 1.5rem 4.5rem;
}
/* All the input fields inside the input-group should not have a border. */

.input-group .btn {
    margin: 5px;
}

@media screen and (min-width: 1024px) {
    .input {
        font-size: 1.5rem;
    }
}

/* Cards */

.card {
    border-radius: 10px;
    box-shadow: 0 0 20px 10px #f3f3f3;
    overflow: hidden;
    /*
    - After applying padding to header, it grew bigger then its parent container.
    - That's why the round corners were not visible.
    - So, there is an overflow.
    - By default, it is visible so we set it to hidden.
    */
}
/*
- We should not apply width to this card as it should stretch to take available space.
- So the width will be determined by the width of the container.
*/

.card__header,
.card__body {
    padding: 2rem 3rem;
}

.card--primary .card__header {
    background: var(--color-primary);
    color: white;
}

.card--secondary .card__header {
    background: var(--color-secondary);
    color: white;
}

.card--secondary .badge--secondary {
    background: #02cdf1;
}

.card--primary .badge--primary {
    background: #106ce4;
}

/* Plans */

.plan {
    transition: transform 0.3s ease-out;
}

.plan__name {
    color: white;
    margin: 0;
    font-size: 2.4rem;
    font-weight: 400;
}

.plan__price {
    font-size: 6rem;
}

.plan__billing-cycle {
    font-weight: 300;
    opacity: 0.8;
    margin-right: 1rem;
}

.plan__description {
    font-size: 2rem;
    font-weight: 300;
    letter-spacing: 1px;
    display: block;
}

.plan .list__item {
    margin-bottom: 2rem;
    letter-spacing: 1px;
}

.plan .btn {
    margin-top: 2.5rem;
}

.plan--popular {
    transform: scale(1.1);
}

.plan--popular .card__header {
    position: relative;
}

.plan--popular .card__header::before {
    content: url(../Images/popular.svg);
    width: 40px;
    display: inline-block;
    position: absolute;
    right: 5%;
    top: -6px;
}

.plan:hover {
    transform: scale(1.05);
}

.plan--popular:hover {
    transform: scale(1.15);
}

@media screen and (min-width: 1024px) {
    .plan__name {
        font-size: 1.4rem;
    }

    .plan__price {
        font-size: 5rem;
    }

    .plan__billing-cycle {
        font-size: 1.6rem;
    }

    .plan__description {
        font-size: 1.7rem;
    }
}

/* Media */

.media {
    display: flex;
    /* To lay items horizontally, so that the icon is on the left side and the content is on right side. */

    margin-bottom: 4rem;
    /* Almost everywhere on the webpage, we have a list of media component, so we want a bottom margin for all the components. */
}

.media__body {
    margin-left: 2rem;
    font-size: 2rem;
}

.media__title {
    margin-top: 0;
}

.media__image {
    margin-top: 1.5rem;
}
/* Here, we have only defined the basic structure of the media component and not its skin. */

/* Quotes */

.quote {
    margin-bottom: 0;
}

.quote__text {
    font-size: 3rem;
    color: var(--color-body-darker);
    font-style: italic;
    line-height: 1.3;
}

.quote__text::before {
    content: open-quote;
}

.quote__text::after {
    content: close-quote;
}

.quote__author {
    margin: 0;
    font-weight: 500;
}

.quote__company {
    color: var(--color-headings);
    opacity: 0.4;
    font-size: 1.7rem;
    margin: 0;
}

.quote__line {
    position: relative;
    bottom: 12px;
}

@media screen and (min-width: 1024px) {
    .quote__text {
        font-size: 2rem;
    }

    .quote__author {
        font-size: 2.4rem;
    }

    .quote__company {
        font-size: 1.6rem;
    }

    .quote__line {
        bottom: 20px;
    }
}

/* Grids */

.grid {
    display: grid;
}

@media screen and (min-width: 768px) {
    .grid--cols-2 {
        grid-template-columns: repeat(2, 1fr);
    }
}
/* ... */

